--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -188,11 +188,11 @@
     <nz-col [nzSpan]="12">
       <nz-card
         nzTitle="Live Curation Activity"
-        style="min-height: 600px"
+        style="height: 100%"
         nzSize="small"
         class="home-card"
       >
-        <cvc-homepage-event-feed [pageSize]="12"></cvc-homepage-event-feed>
+        <cvc-homepage-event-feed [pageSize]="23"></cvc-homepage-event-feed>
       </nz-card>
     </nz-col>
   </nz-row>
