--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.html
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.html
@@ -4,9 +4,9 @@
   [successMessage]="success">
   <ng-template #success>Added new Molecular Profile</ng-template>
 
-  <!-- PREVIEW ROW -->
+  <!-- PREVIEW, MESSAGE/ALERT, EDITOR LAYOUT - uses a single row element w/ 24 col width spans -->
   <nz-row [nzGutter]="[6, 8]">
-    <!-- preview row -->
+    <!-- PREVIEW ROW -->
     <nz-col nzSpan="24">
       <div
         class="expression-preview"
@@ -130,7 +130,6 @@
             nzShape="round"
             nz-popover
             nzPopoverTrigger="click"
-            [nzPopoverTitle]="error.errorHelp"
             [nzPopoverContent]="content">
             <span
               nz-icon
@@ -153,6 +152,7 @@
                 context: { $implicit: error, helpContent: invalidTokenHelp }
               ">
             </ng-container>
+
             <!-- trailing boolean help -->
             <ng-template #invalidTokenHelp>
               <cvc-mp-editor-popover-help
@@ -285,7 +285,7 @@
     </nz-col>
   </nz-row>
 
-  <!-- BUTTON ROW -->
+  <!-- BUTTON ROW - requires its own layout row that uses flex layout -->
   <nz-row class="btn-row">
     <nz-col nzFlex="80px">
       <button
