Display HPO term definitions when available

--- a/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
@@ -19,6 +19,14 @@
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
+        <nz-space nzDirection="vertical" style="width: 100%;">
+          <nz-descriptions *nzSpaceItem [nzBordered]="true" nzLayout="vertical" [nzColumn]="1">
+            <nz-descriptions-item nzTitle="Definition">
+              {{phenotype.description | ifEmpty: '--'}}
+            </nz-descriptions-item>
+          </nz-descriptions>
+          <p *nzSpaceItem></p>
+        </nz-space>
         <router-outlet></router-outlet>
       </div>
     </nz-page-header-content>
