add orcid logo to login option

--- a/client/src/app/components/layout/auth-options-list/auth-options-list.component.html
+++ b/client/src/app/components/layout/auth-options-list/auth-options-list.component.html
@@ -38,6 +38,10 @@
         nzType="default"
         nzSize="large"
         nzShape="round">
+        <img
+          src="assets/images/orcid-logo.svg"
+          class="orcid-logo"
+          alt="ORCID Logo" />
         Sign In with an ORCID Account
       </button>
     </form>
