--- a/client/src/app/components/layout/auth-options-list/auth-options-list.component.less
+++ b/client/src/app/components/layout/auth-options-list/auth-options-list.component.less
@@ -5,3 +5,13 @@
 nz-list-item form {
   width: 100%;
 }
+
+.orcid-logo {
+  width: 16px;
+  margin-right: 4px;
+  line-height: 1;
+}
+
+i {
+  font-size: 16px;
+}
