use the orcid logo on user profile pages

--- a/client/src/app/views/users/users-detail/users-detail.component.html
+++ b/client/src/app/views/users/users-detail/users-detail.component.html
@@ -77,7 +77,10 @@
                     href="https://orcid.org/{{ user.orcid }}"
                     target="_blank"
                     *nzSpaceItem>
-                    <span>ID</span>
+                    <img
+                    src="/assets/images/orcid-logo.svg"
+                    class="orcid-logo"
+                    alt="ORCID Logo" />
                   </a>
                 </ng-container>
               </nz-space>
