--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -52,6 +52,16 @@
     margin-bottom: 16px;
   }
 
+  .user-socials i {
+    font-size: 16px;
+    color: black;
+  }
+
+  .orcid-logo {
+    width: 16px;
+    margin-top: -4px;
+  }
+
   .content {
     margin-bottom: 8px;
   }
