--- a/client/src/app/forms2/config/evidence-submit/evidence-submit.form.html
+++ b/client/src/app/forms2/config/evidence-submit/evidence-submit.form.html
@@ -7,6 +7,18 @@
     View your new EID
     <a [routerLink]="['/evidence', newEvidenceId, 'summary']">here</a>. You will be redirected shortly.
   </ng-template>
+  <ng-container *ngIf="this.existingEvidenceCount$ | ngrxPush as count">
+    <nz-alert *ngIf="count > 0" nzType="warning" [nzMessage]="duplicateEvidenceAlert" > </nz-alert>
+    <ng-template #duplicateEvidenceAlert>
+        <p>
+          <strong>
+            Evidence for this Molecular Profile has already been curated from this Source. Please double check that your Evidence has not already been entered.
+          </strong>
+        </p>
+        <cvc-evidence-table [molecularProfileId]="this.selectedMpId" [sourceId]="this.selectedSourceId" cvcHeight="150"></cvc-evidence-table>
+    </ng-template>
+    <br/>
+  </ng-container>
   <form
     nz-form
     nzLayout="vertical"
@@ -18,7 +30,7 @@
       [model]="model"
       [options]="options"
       style="width: 100%"
-      (modelChange)="model = $event">
+      (modelChange)="model = $event; onModelChange($event)">
     </formly-form>
   </form>
 </cvc-form-submission-status-display>
