--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -395,17 +395,17 @@
               nzValue="COMMON_GERMLINE"
               nzLabel="Common Germline"></nz-option>
             <nz-option
-              nzValue="UNKNOWN"
-              nzLabel="Unkown"></nz-option>
-            <nz-option
-              nzValue="NA"
-              nzLabel="N/A"></nz-option>
-            <nz-option
               nzValue="GERMLINE_OR_SOMATIC"
               nzLabel="Germline or Somatic"></nz-option>
             <nz-option
               nzValue="COMBINED"
               nzLabel="Combined"></nz-option>
+            <nz-option
+              nzValue="UNKNOWN"
+              nzLabel="Unkown"></nz-option>
+            <nz-option
+              nzValue="NA"
+              nzLabel="N/A"></nz-option>
           </nz-select>
         </th>
         <th
@@ -541,9 +541,12 @@
             <nz-tag
               nz-tooltip
               nzTooltipPlacement="top"
-              [nzTooltipTitle]="!isScrolling ? (eid.evidenceType | evidenceEnumDisplay) : ''">
-              <i nz-icon
-                [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
+              [nzTooltipTitle]="
+                !isScrolling ? (eid.evidenceType | evidenceEnumDisplay) : ''
+              ">
+              <i
+                nz-icon
+                [nzType]="eid.evidenceType | evidenceEnumDisplay : 'icon-name'"
                 class="attribute-icon"></i>
             </nz-tag>
           </td>
