fixed var/eid managers' identical selectors for enum-filter component

--- a/client/src/app/forms2/types/variant-select/variant-manager/enum-filter-menu/enum-filter-menu.component.less
+++ b/client/src/app/forms2/types/variant-select/variant-manager/enum-filter-menu/enum-filter-menu.component.less
@@ -16,7 +16,7 @@
   }
   // #cdk-overlay-0
   //   > div
-  //   > cvc-enum-filter-menu
+  //   > cvc-variant-enum-filter-menu
   //   > ul
   //   > li.ant-dropdown-menu-item.ng-star-inserted.ant-dropdown-menu-item-selected;
 }
