fixed several other component selector collisions w/ simple rename

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -521,8 +521,8 @@
       </ng-container>
     </nz-col>
     <nz-col nzFlex="auto">
-      <cvc-table-counts
-        [cvcTableCountsConnection]="connection$"></cvc-table-counts>
+      <cvc-table-counts2
+        [cvcTableCountsConnection]="connection$"></cvc-table-counts2>
     </nz-col>
 
     <!-- card button row -->
